# sig

./: LICENSE  default.nix  release.nix  shell.nix  sig.cabal
app/: Main.hs
cbits/: sig.c
sig-benchmark/: Main.hs
src/: Sig.hs
src/Sig/: Examples.hs  Main.hs  Matrix.hs  State.hs  StateMachine.hs  Transition.hs
tasty/: Driver.hs  Main.hs
