name:                sig
version:             1.0.0
synopsis:            Blazing fast signature detection
-- description:         
homepage:            https://github.com/Gabriel439/Haskell-Sig-Library
license:             BSD3
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
copyright:           2018 Gabriel Gonzalez
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Sig
                     , Sig.Examples
                     , Sig.Main
  build-depends:       base >=4.9 && < 5
                     , async
                     , binary
                     , bytestring
                     , parallel
                     , mmap
                     , optparse-generic
                     , system-filepath
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  c-sources:           cbits/sig.c
  ghc-options:         -Wall
  cc-options:          -mssse3 -O3

executable sig-benchmark
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base, sig
  ghc-options:         -threaded -with-rtsopts=-N -Wall
  cc-options:          -mssse3 -O3
