name:                sig
version:             1.0.0
synopsis:            Blazing fast signature detection
-- description:         
homepage:            https://github.com/Gabriel439/Haskell-Sig-Library
license:             BSD3
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
copyright:           2018 Gabriel Gonzalez
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Sig
                     , Sig.Examples
  build-depends:       base >=4.9 && < 5
                     , binary
                     , bytestring
                     , parallel
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  c-sources:           cbits/sig.c
  ghc-options:         -Wall
  cc-options:          -mavx2 -mssse3 -msse4.2 -O3 -Wno-psabi

executable sig-benchmark
  hs-source-dirs:      sig-benchmark
  main-is:             Main.hs
  build-depends:       base
                     , sig
                     , mmap
                     , optparse-generic
                     , system-filepath
  ghc-options:         -threaded -with-rtsopts=-N -Wall
  default-language:    Haskell2010

test-suite tasty
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tasty
  main-is:             Main.hs
  build-depends:       base
                     , binary
                     , bytestring
                     , sig
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  other-modules:       Driver
  build-tool-depends:  tasty-discover:tasty-discover
  ghc-options:         -Wall
  default-language:    Haskell2010
